--- a/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.html
+++ b/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.html
@@ -21,7 +21,7 @@
           </div>
           <p class="cart-item-price">{{ item.product?.price }} DT x {{ item.quantity }}</p>
         </div>
-        <button class="remove-item-btn" (click)="removeFromCart(item.id)">🗑</button>
+        <button class="remove-item-btn" (click)="removeFromCart(item.product.id)">🗑</button>
       </div>
     </div>
 
